--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Mudassar\\LaravelQrCode\\": "laravel-qr-code",
-            "Mudassar\\QrCode\\": "qr-code"
+            "Mudassar\\LaravelQrCode\\": "laravel-qr-code/",
+            "Mudassar\\QrCode\\": "qr-code/"
         }
     }
 }
