--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.0.0",
-        "mpdf/mpdf": "^7.1"
+        "php": ">=7.0",
+        "mvc-php/framework": "master@dev"
     },
     "autoload": {
         "psr-4": {
